syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

package counter;

service CounterAssignmentService {
  rpc ListSectors(google.protobuf.Empty) returns(ListSectorsResponse);
}

message ListSectorsResponse {
  string sectorName = 1;
  repeated int32 counterRangeStart = 2;
  repeated int32 counterRangeSize = 3;
}